# TFM

./: .gitignore
medscribe_ai_module/: README.md  history.json  pyproject.toml  requirements-llm.txt  requirements.lock.txt  requirements.txt
medscribe_ai_module/data/outputs/: result.json  result_035.json  result_060.json  result_clean.json  result_roles.json  result_roles_nlp.json
medscribe_ai_module/examples/: demo_cli.sh  sample_transcript_es.txt
medscribe_ai_module/medscribe_ai/: README.md  __init__.py  cli.py
medscribe_ai_module/medscribe_ai/audio/: asr_whisper.py  preprocess.py
medscribe_ai_module/medscribe_ai/diarization/: light_diarizer.py  role_assignment.py  silero_vad.py
medscribe_ai_module/medscribe_ai/llm/: finetune_lora.py
medscribe_ai_module/medscribe_ai/nlp/: entities.py  extractor.py  normalization.py  sectioning.py
medscribe_ai_module/medscribe_ai/pipelines/: consultation.py
medscribe_ai_module/medscribe_ai/vocab/: etymology.py  medical_etymology.json
